Fix url generation to match that of wordpress.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Jekyll
-permalink: /:categories/:title/
+permalink: /:year/:month/:day/:title
 exclude: [release.sh]
 name: Disclojure, Public Disclosure of All Things Clojure
 pygments: false
